# terraform-aws-lambda-ecs-manager

./: .coveragerc  .editorconfig  .envrc  .gitignore  .markdownlint.yaml  .markdownlintrc  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  invoke  main.tf  mypy.ini  outputs.tf  pyproject.toml  pytest.ini  run_local  setup.cfg  variables.tf
.circleci/: config.yml
functions/: aws.py  boto3_helpers.py  manager.py  runtask.py
functions/pkg/: manager.py
tests/: .flake8  conftest.py  sample_task_definition.json  test_aws.py  test_boto3_helpers.py  test_manager.py
tests/data/: ssm_parameters_stored.json
tests/test_boto3_helpers/: test_boto3_helpers.py
tests/test_manager/: test_lambda_handler.py  test_logging.py  test_manager.py  test_map_ecs_ssm_parameters.py  test_runtask.py
