[tool.poetry]
name = "functions"
version = "0.1.0"
description = ""
authors = ["Ryan Delaney <ryan@truss.works>"]
readme = "README.md"
repository = "https://github.com/trussworks/terraform-aws-lambda-runtask"
homepage = "https://registry.terraform.io/modules/trussworks/lambda-runtask/aws/"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.28"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
mypy = "^0.770"
mypy-boto3-lambda = "^1.12.28"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
flake8-boto3 = "^0.3.0"
flake8-bandit = "^2.1.2"
mock = "^4.0.2"
flake8-builtins = "^1.5.2"
flake8-assertive = "^1.2.1"
flake8-comprehensions = "^3.2.2"
flake8-eradicate = "^0.3.0"
flake8-fixme = "^1.1.1"
flake8-print = "^3.1.4"

[tool.black]
line-length = 79
target_version = ["py38"]

[tool.isort]
combine_star = true
indent='    '
known_first_party = []
known_third_party = ["boto3", "pytest"]
length_sort = false
line_length = 79
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
